When an image was saved with "Save As" with a filename that already existed in the album, the new ImageInfo was first created through signalNewFilteredItems but deleted through signalDeleteFilteredItem for the old image - because both used the same filename.

BUG: 112000

svn path=/trunk/extragear/graphics/digikam/; revision=458915